--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header class="text-center mb-4">
         <img src="divster's cafe.png" alt="Divya Cafe Logo" class="logo img-fluid mb-3">
         <h1 class="tagline display-6">Super Slay Recipes at Divya's Cafe!</h1>
-        <h2 class="tagline display-6">Best food in town</h2>
+        <h2 class="item-description">Best food in town</h2>
       </header>
       
       <div class="menu">
